# langgraph_cv_gen

./: .env.example  .gitignore  README.md  pyproject.toml
src/apply/: api.py  graph.py  models.py  profile.py  state.py
src/apply/nodes/: compile_latex.py  draft.py  evaluate_fit.py  fetch_job.py  parse_job.py  review.py  revise.py
src/apply/prompts/: 01-candidate-profile.md  02-behavioral-profile.md  03-writing-style.md  04-job-evaluation.md  05-cv-templates.md  06-cover-letter-templates.md
tests/: test_api.py  test_graph.py  test_models.py  test_profile.py  test_state.py
tests/test_nodes/: test_compile_latex.py  test_draft.py  test_evaluate_fit.py  test_fetch_job.py  test_parse_job.py  test_review.py  test_revise.py
